<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
	android:onClick="removeFocusFromEditText">
   
   	<RelativeLayout 
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/unselected">
	    
        <Button 
            android:id="@+id/birthdays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
            android:text="@string/show_list"
            android:textColor="@color/white"
            android:background="@drawable/my_menu_button_state"
            android:onClick="clickShowBirthdays"/>
        
        <Button 
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
            android:text="@string/add"
            android:background="@drawable/thisactivity"/>
	</RelativeLayout>  

	<LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="match_parent"
   	 	android:background="@drawable/background"
   	 	android:orientation="vertical">
        
	    <LinearLayout
	        android:id="@+id/formView"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:gravity="center">
	    
		    <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginBottom="2dp">
		        
		        <TextView 
		            android:layout_width="130dp"
			    	android:layout_height="wrap_content"
				    android:layout_marginLeft="5dp"
			    	android:text="@string/first_name_string"
				    android:textSize="17sp"/>
		        
				<EditText
				    android:id="@+id/firstnameView"
				    android:layout_width="fill_parent"
				    android:layout_height="40dp"
				    android:layout_marginRight="10dp"
				    android:paddingLeft="5dp"
				    android:inputType="text|textCapWords"
				    android:text="@string/required_string"
					android:background="@drawable/view_border"/>
			</LinearLayout>
			
		    <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginBottom="2dp">
		        
		        <TextView 
		            android:layout_width="130dp"
			    	android:layout_height="wrap_content"
				    android:layout_marginLeft="5dp"
			    	android:text="@string/last_name_string"
				    android:textSize="17sp"/>
		        
				<EditText
				    android:id="@+id/lastnameView"
				    android:layout_width="fill_parent"
				    android:layout_height="40dp"
				    android:layout_marginRight="10dp"
				    android:paddingLeft="5dp"
				    android:inputType="text|textCapWords"
				    android:text="@string/required_string"
				    android:textColor="@color/black"
				    android:background="@drawable/view_border"/>
			</LinearLayout>
			
		    <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
				android:layout_marginBottom="10dp">
		        
		        <TextView 
		            android:layout_width="130dp"
			    	android:layout_height="wrap_content"
				    android:layout_marginLeft="5dp"
			    	android:text="@string/phone_number_string"
				    android:textSize="17sp"/>
		        
				<EditText
				    android:id="@+id/phonenumView"
				    android:layout_width="fill_parent"
				    android:layout_height="40dp"
				    android:layout_marginRight="10dp"
				    android:paddingLeft="5dp"
				    android:inputType="phone"
				    android:text="@string/required_string"
				    android:background="@drawable/view_border"/>
			</LinearLayout>
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/dateView"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:gravity="center">
			
		    <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content">
				
			    <TextView 
		            android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
				    android:layout_marginLeft="5dp"
			    	android:text="@string/set_birthday_string"
				    android:textSize="17sp"/>
		    </LinearLayout>
		    
			<DatePicker
		        android:id="@+id/datePicker"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
		        android:calendarViewShown="false"
		        android:background="@drawable/view_border"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>