<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" 
	android:layout_height="wrap_content"
	android:orientation="horizontal" 
	android:background="@drawable/listview_state"> 
	
	<LinearLayout
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_centerVertical="true"
	    android:orientation="vertical">
	      
	    <LinearLayout
	    	android:layout_width="190dp"
	        android:layout_height="wrap_content"
	       	android:layout_marginLeft="10dp"
	        android:orientation="horizontal">
	        
			<TextView
				android:id="@+id/firstname"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
	        	android:layout_marginRight="2dp"
				android:textStyle="bold"/>
			
			<TextView
				android:id="@+id/lastname"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="bold"/>
		</LinearLayout>
		
		<TextView
		    android:id="@+id/date"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	       	android:layout_marginLeft="25dp"/>
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">
		
	    <LinearLayout
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center_horizontal">
			
			<TextView
		        android:id="@+id/turnsTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:text="@string/turns"/>
			
		    <TextView
		        android:id="@+id/turns"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="bold"/>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:orientation="vertical"
	        android:gravity="center_horizontal">
			
			<TextView
		        android:id="@+id/in"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:text="@string/in"/>
			
		    <TextView
		        android:id="@+id/daysUntil"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="bold"/>
		    
		    <TextView
		        android:id="@+id/daysUntilView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:text="@string/days"/>
		</LinearLayout>
    </LinearLayout>
</RelativeLayout>